--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -9,16 +9,8 @@
 <%- include ('partials/main_nav.ejs') %>
 
 <main class=”container”>
+    <link rel="stylesheet" href="/stylesheet/style.css"/>
     <div class=”jumbotron”>
-        <style>
-            div {
-              display: flex;
-              flex-direction: column;
-              text-align: center;
-              margin: 0;
-              padding: 0;
-            }
-          </style>
         <h1 class=”display-4”>Welcome to <%= title %> page</h1>
         <strong>LET'S TALK WITH ME</strong>
         <div class="contact-info">
