--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,16 +9,8 @@
 <%- include ('partials/main_nav.ejs') %>
 
 <main class=”container”>
+    <link rel="stylesheet" href="/stylesheet/style.css"/>
     <div class=”jumbotron”>
-        <style>
-            div {
-              display: flex;
-              flex-direction: column;
-              text-align: center;
-              margin: 0;
-              padding: 0;
-            }
-          </style>
         <h1 class=”display-4”>Welcome to My Personal Website</h1>
         <p>Thank you for visiting! Explore and learn more about me and what I learn from my course.</p>
         <h2>Mission Statement</h2>
