--- a/app/views/partials/bottom_nav.ejs
+++ b/app/views/partials/bottom_nav.ejs
@@ -1,5 +1,6 @@
 <footer>
     <nav class="navbar fixed-bottom navbar-white bg-grey">
+        <div class="navbar-brand mx-auto">
         <p id="copyright">&copy;&nbsp;Copyright Pak Hin Wong - 301224021 - Assignment#1</p>
         </div>
     </nav>
