--- a/app/views/partials/main_nav.ejs
+++ b/app/views/partials/main_nav.ejs
@@ -5,7 +5,7 @@
     Date: June 08, 2023
 -->
 
-<nav class="navbar navbar-expand-lg navbar-dark"; class="center">
+<nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
     <img src="/img/pic.png" alt="logo" style: width="350px"; height="200px">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-
