--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -8,26 +8,10 @@
 <%- include ('partials/main_nav.ejs') %>
 
 <main class=”container”>
+    <head>
+        <link rel="stylesheet" href="/stylesheet/style.css"/>
+    </head>
     <div class=”jumbotron”>
-    
-    <style>
-    div {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-    }
-    .myself {
-      width: 200px; /* Adjust the width as desired */
-      height: 200px; /* Automatically adjust the height based on the width */
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 20px;
-      margin-left: auto;
-      margin-right: auto;
-  }
-    </style>
         <h1 class=”display-4”>Welcome to <%= title %> page</h1>
         <img src="/img/myself.jpeg" alt="myself" class="myself">
         <br>
