--- a/app/views/services.ejs
+++ b/app/views/services.ejs
@@ -5,29 +5,11 @@
     Date: June 08, 2023
 -->
 
-<%- include ('partials/header.ejs') %>
-<%- include ('partials/main_nav.ejs') %>
-
 <main class=”container”>
+    <%- include ('partials/header.ejs') %>
+    <%- include ('partials/main_nav.ejs') %>
+    <link rel="stylesheet" href="/stylesheet/style.css"/>
     <div class=”jumbotron”>
-        <style>
-            div {
-              display: flex;
-              flex-direction: column;
-              text-align: center;
-              margin: 0;
-              padding: 0;
-            }
-            .web, .mobile, .database, .cyber {
-                width: 150px; /* Adjust the width as desired */
-                height: 150px; /* Automatically adjust the height based on the width */
-                border-radius: 50%;
-                object-fit: cover;
-                margin-bottom: 20px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-          </style>
         <h1 class=”display-4”>Welcome to <%= title %> page</h1>
         <h2><strong>Software Development</strong></h2>
         <p>By creating platforms that live up to your ambitions, we allow your business to improve its efficiency and offer your customers a more targeted experience.</p>
