--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -14,8 +14,7 @@
     <div class=”jumbotron”>
         <h1 class=”display-4”>Welcome to <%= title %> page</h1>
         <img src="/img/myself.jpeg" alt="myself" class="myself">
-        <br>
-        <strong>| THIS IS TALKING ABOUT ME |</strong> <br>
+        <strong>| THIS IS TALKING ABOUT ME |</strong>
         <a href="/img/resume.pdf">Click here to view my Resume!</a>
         <td>My name is Eden Wong. I am from Hong Kong. I'm a student at Cnetennial College.<br>          
             I am studying Software Engineer Technician and this is my third semester <br>
